<resources>
    <string name="app_name">Belibeli</string>
    <string name="main">活动</string>
    <string name="find">发现</string>
    <string name="gallery">图库</string>
    <string name="job">职位</string>
    <string name="search">搜索</string>
    <string name="login">登录</string>
    <string name="hint_username">请输入用户名</string>
    <string name="hint_pwd">请输入密码</string>
    <string name="register">注册</string>
    <string name="remember">记住密码</string>
    <string name="forget">忘记密码</string>
</resources>
